# Dogs-Adoption-App

./: CMakeLists.txt  README.md
src/: adoption_list.html  adoption_list.txt  dogs.html  dogs.txt  main.cpp
src/GUI/: AdminGUI.cpp  AdminGUI.h  GUI.h  MainGUI.cpp  MainGUI.h  UserGUI.cpp  UserGUI.h
src/UI/: Console.cpp  Console.h
src/UI/exceptions/: ConsoleException.h
src/UndoRedo/: Command.cpp  Command.h  UndoRedo.cpp  UndoRedo.h
src/domain/: Dog.cpp  Dog.h
src/models/: DogsModel.cpp  DogsModel.h
src/repository/: CSVFileRepository.cpp  CSVFileRepository.h  FileRepository.cpp  FileRepository.h  HTMLFileRepository.cpp  HTMLFileRepository.h  Repository.cpp  Repository.h
src/repository/exceptions/: FileRepositoryException.h  RepositoryException.h
src/repository/validators/: DogValidator.cpp  DogValidator.h
src/service/: Service.cpp  Service.h
src/service/exceptions/: ServiceException.h
src/tests/: TestDog.cpp  TestDog.h  TestRepository.cpp  TestRepository.h  TestService.cpp  TestService.h  tests.cpp  tests.h
src/utilities/: Utilities.cpp  Utilities.h
src/views/: DogsTableView.cpp  DogsTableView.h
